<resources>
    <string name="app_name">Time Sheet</string>
    <string name="web_client_id" translatable="false">293126761790-6cckh19jil5eetfrhlmdbsh3a00n17i4.apps.googleusercontent.com</string>
    <string name="logout">ອອກຈາກລະບົບ</string>
    <string name="title_email">ອີເມວ</string>
    <string name="title_name_last_name">ຊື່ ແລະ ນາມສະກຸນ</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="loading">ກໍາລັງດາວໂຫຼດ…</string>
    <string name="my_information">ຂໍ້ມຸນຂອງຂ້ອຍ</string>
    <string name="toolbar_add_description">ເຫດຜົນການເຂົ້າວຽກ</string>
    <string name="connection_error">ບໍ່ມີການເຊື່ອມຕໍ່</string>
    <string name="title_reson">ເຫດຜົນ ໃນການເຂົ້າວຽກ</string>
    <string name="reson">ເຫດຜົນ</string>
    <string name="confirm">ຢືນຢັນ</string>
    <string name="toolbar_vacation">ອະນຸຍາດ ລາພັກ</string>
    <string name="title_no_message">ບໍ່ມີຂໍ້ຄວາມ</string>
    <string name="toolbar_home">ໜ້າຫຼັກ</string>
    <string name="title_warning">ແຈ້ງເຕືອນ</string>
    <string name="out_of_service"> ບໍ່ມີຂໍ້ມຸນ</string>
    <string name="press_again_to_exit">ກົດອີກຄັ້ງເພື່ອອອກ.</string>
    <string name="export_all">ນໍາອອກທັງໝົດ</string>
    <string name="hint_enter_email">ກະລຸນາປ້ອນ ອີເມວ</string>
    <string name="hint_enter_password">ກະລຸນາປ້ອນ ລະຫັດຜ່ານ</string>
    <string name="message_incorrect_email_and_password">ອີເມວ ແລະ ລະຫັດຜ່ານບໍ່ຖືກຕ້ອງ</string>
    <string name="title_login">ເຂົ້າສູ່ລະບົບ</string>
    <string name="hint_email">ກະລຸນາປ້ອນ ອີເມວ</string>
    <string name="title_password">ລະຫັດຜ່ານ</string>
    <string name="sign_up">ລົງທະບຽນ</string>
    <string name="message_already_pressed">ກົດແລ້ວ </string>
    <string name="message_ready">ພ້ອມແລ້ວ</string>
    <string name="message_please_wait">ກະລຸນາລໍຖ້າ</string>
    <string name="title_work_today">ເຂົ້າວຽກມື້ນີ້</string>
    <string name="toolbar_notification_message">ຂໍ້ຄວາມແຈ້ງເຕືອນ</string>
    <string name="title_name">ຊື່</string>
    <string name="title_date">ວັນທີ</string>
    <string name="title_time">ເວລາ</string>
    <string name="setting">ຕັ້ງຄ່າ</string>
    <string name="setting_notification">ແຈ້ງເຕືອນກົດເຂົ້າວຽກ</string>
    <string name="working_time">ເວລາເຮັດວຽກພະນັກງານ</string>
    <string name="hint_confirm_password">ກະລຸນາປ້ອນ ຢືນຢັນລະຫັດຜ່ານ</string>
    <string name="hint_password_not_match">ລະຫັດຜ່ານ ບໍ່ກົງກັນ</string>
    <string name="hint_password_not_enought">ລະຫັດຜ່ານ ຕ້ອງຫຼາຍກວ່າ 6 ຕົວ.</string>
    <string name="hint_incorrect_email">ອີເມວບໍ່ຖືກຕ້ອງ</string>
    <string name="hint_enter_company_name">ກະລຸນາປ້ອນ ຊື່ບໍລິສັດ</string>
    <string name="title_company">ບໍລິສັດ</string>
    <string name="title_confirm_password">ຢືນຢັນລະຫັດຜ່ານ</string>
    <string name="toolbar_update_time_sheet">ແກ້ໄຂເວລາ</string>
    <string name="title_status_work">ສະຖານະເຂົ້າວຽກ</string>
    <string name="hint_status_work">ກະລຸນາເລືອກ ສະຖານະເຂົ້າວຽກ</string>
    <string name="hint_select_date">ກະລຸນາເລືອກ ວັນທີ</string>
    <string name="hint_select_time">ກະລຸນາເລືອກ ເວລາ</string>
    <string name="title_resion">ເຫດຜົນ</string>
    <string name="hint_enter_reson">ກະລຸນາປ້ອນ ເຫດຜົນ</string>
    <string name="update">ອັບເດດ</string>
    <string name="toolbar_user_time_sheet">ຂໍ້ມຸນການເຂົ້າວຽກ</string>
    <string name="export">ນໍາອອກ</string>
    <string name="toolbar_vactions">ອະນຸຍາດລາພັກ</string>
    <string name="vacation">ລາພັກ</string>
    <string name="title_vacation_condition">ເງື່ອນໄຂໃນການພັກ</string>
    <string name="title_vacation_qty">ຈໍານວນວັນຂາດ</string>
    <string name="vacation_of_the_year">ໃຊ້ວັນພັກປະຈໍາປີ</string>
    <string name="vacation_sick_of_year">ໃຊ້ວັນພັກລາປ່ວຍ</string>
    <string name="no_use">ບໍ່ໄຊ້</string>
    <string name="hint_vacation_qty">ກະລຸນາປ້ອນຈໍານວນມື້</string>
    <string name="start_date">ເລີ່ມແຕ່ວັນທີ</string>
    <string name="start">ເລີ່ມ</string>
    <string name="dash">-</string>
    <string name="end">ສີ້ນສຸດ</string>
    <string name="work_today">ເຂົ້າວຽກມື້ນີ້</string>
    <string name="staff">ພະນັກງານ</string>
    <string name="company">ບໍລິສັດ</string>
    <string name="message_success">ສໍາເລັດແລ້ວ</string>
    <string name="title_vacation_day">ວັນພັກປະຈໍາປີ :</string>
    <string name="title_sick_day">ວັນພັກລາປ່ວຍປະຈໍາປີ :</string>
    <string name="menu_work_time">ເວລາເຮັດວຽກ</string>
    <string name="all_time_in_month">ເວລາທັງໝົດ</string>
    <string name="lost_time_in_month">ເວລາຂາທັງໝົດ</string>
    <string name="real_time">ເວລາຕົວຈິງ</string>
    <string name="modify">ປັດເວລາ</string>
    <string name="export_method">ວິທີການນໍາອອກ</string>
    <string name="year_and_month">ປີ ແລະ ເດືອນ</string>
    <string name="cancel">ຍົກເລີກ</string>
    <string name="ok">ຕົກລົງ</string>
    <string name="open_gps">ກະລຸນາເປີດ gps</string>
    <string name="folder_info_title">ຂໍ້ມຸນໂຟນເດີ</string>
    <string name="stort_file_as">ຟາຍຈະບັນທຶກໄວ້ທີ</string>
    <string name="subspanded">ຖືກລະຫງັບແລ້ວ</string>
    <string name="title_vacation">ວັນພັກປະຈໍາປີ</string>
    <string name="hint_vacation">ກະລຸນາ ປ້ອນຈໍານວນວັນພັກປະຈໍາປີ</string>
    <string name="title_sick">ວັນພັກລາປ່ວຍ</string>
    <string name="hint_sick">ກະລຸນາ ປ້ອນຈໍານວນວັນພັກລາປ່ວຍ</string>
</resources>