<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="50dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_account_circle"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_company"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_enter_company_name"
        android:padding="10dp"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:id="@+id/name"
        tools:ignore="Autofill" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_enter_email"
        android:padding="10dp"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_password"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_enter_password"
        android:padding="10dp"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:id="@+id/password"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm_password"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_confirm_password"
        android:padding="10dp"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:id="@+id/confirm_password"
        tools:ignore="Autofill" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="10dp"
        android:id="@+id/signUpButton"/>


</LinearLayout>