<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AddTimeSheetDescriptionActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/title_reson"
            android:textSize="20sp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/date_time"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:padding="10dp"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/reson"
       android:textColor="@color/black"
       android:textStyle="bold"
       android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:hint="@string/hint_enter_reson"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:id="@+id/description"
        tools:ignore="Autofill" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:text="@string/confirm"
        android:textStyle="bold"
        android:id="@+id/confirm_button"
        android:textColor="@color/white"/>


</LinearLayout>